--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MinhasAnotacoes">
+        android:theme="@style/Theme.MyNotes">
         <activity
             android:name=".ui.NoteActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MyNotes.NoBar"/>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
